--- a/2024.html
+++ b/2024.html
@@ -74,6 +74,7 @@
             <li><a href="https://www.higby.io/">Branden Higby</a></li>
             <li><a href="https://joelchrono.xyz/">joelchrono</a></li>
             <li><a href="https://sarajoy.dev/">Sara Joy</a></li>
+            <li><a href="https://linebyline.de/">Webdesigner</a></li>
             <li><a href="https://emmajuettner.com/">Emma Juettner</a></li>
             <li><a href="https://eklausmeier.goip.de/blog">Elmar Klausmeier</a></li>
             <li><a href="https://knowler.dev/">Nathan Knowler</a></li>
